fixup! Squash all commits?!

--- a/styleguide/assets/variables.css
+++ b/styleguide/assets/variables.css
@@ -6,7 +6,6 @@
     --color-background-darker:#dbdbdb;
     --color-background-hover: #f5f5f5;
     --color-primary:#0082c9;
-    --color-primary-light: #e6f3f9;
     --color-primary-text:#fff;
     --color-primary-text-dark:#ededed;
     --color-primary-element:#0082c9;
